<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10sp"
    android:layout_marginLeft="10sp"
    tools:context=".UserPortal">

    <TextView
        android:id="@+id/portal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User Portal"
        android:textSize="32sp" />

    <Button
        android:id="@+id/notificationsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/portal"
        android:layout_centerInParent="true"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="20sp"
        android:text="View Notifications" />

    <Button
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notificationsButton"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20sp"
            android:text="Log Out" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logOutButton"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20sp"
        android:text="Create Event" />

    <Button
        android:id="@+id/viewEventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createEventButton"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20sp"
        android:text="Browse Events" />

    <Button
        android:id="@+id/viewMapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewEventsButton"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20sp"
        android:text="View Map" />

    <Button
        android:id="@+id/manageEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewMapButton"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20sp"
        android:text="Manage My Events" />

    <Button
        android:id="@+id/rsvpInviteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manageEvents"
        android:layout_centerInParent="true"
        android:text="View RSVPs and Invites" />

    <Button
        android:id="@+id/viewEditProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rsvpInviteButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:text="View / Edit Profile" />

</RelativeLayout>