...


    <EditText
        android:id = "@+id/username1"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "User Name"
        android:layout_marginTop = "50dp"
        />

    <EditText
        android:id = "@+id/password1"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "Password"
        android:layout_marginTop = "50dp"
        android:layout_below = "@+id/username1"/>
    />

    <Button
        android:id="@+id/btnsignin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password1"
        android:layout_marginTop="50dp"
        android:text="Sign in" />

    <Button
        android:id="@+id/btnNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password1"
...
