<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InvitationActivity"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:id = "@+id/inviteRSVPTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="My Invitations"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/inviteRSVPView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View RSVPs"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/returnUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Back"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>